reflow optimizing, scrollbar fixes and general theme optimizing

--- a/services/web_ui/media/themes/start/css/hwios_activity.css
+++ b/services/web_ui/media/themes/start/css/hwios_activity.css
@@ -4,9 +4,9 @@
     overflow: auto;
     overflow-x: hidden;
     position:relative;
-    margin-bottom:5px;
     resize: vertical;
-    border-bottom:1px dotted #00aeef;
+    border-top:1px solid #ddd;
+    border-bottom:1px solid #999;
 }
 
 #activity-widget * {
@@ -35,10 +35,12 @@
 .activity-entry {
     width:100%;
     float:left;
+    border-top:1px solid #ddd;
+    border-bottom:1px solid #efefef;
 }
 
 .activity-entry-source {
-    font-size:12px;
+    font-size:11px;
     font-style:italic;
     padding:1px;
     padding-left:20px;
@@ -56,7 +58,7 @@
 }
 
 .activity-entry-message a {
-    font-size:13px;
+    font-size:11px;
 font-weight:bold;
 }
 
