--- a/services/web_ui/media/themes/start/css/hwios_core.css
+++ b/services/web_ui/media/themes/start/css/hwios_core.css
@@ -1,19 +1,28 @@
 html {
-    width:100%;
-    height:100%;
-    font-size:13px;
-    overflow:auto;
-    box-sizing:border-box;
-    -moz-box-sizing:border-box;
-    font-family:"FreeSans","Bitstream Vera Sans","Arial";
     background: #fff url('images/body_bg.png') repeat-x;
-    border-top:5px solid #000;
+    overflow-y:hidden;
+    height:100%;
+    width:100%;
 }
 
 body {
+    font-size:13px;
+    border-top:5px solid #000;
+    font-family:"FreeSans","Bitstream Vera Sans","Arial";
+    width:100%;
+    height:100%;
+    margin:0px;
+    overflow:auto;
+    overflow-y:scroll;
+}
+
+#content-container {
     max-width:1200px;
     min-width:700px;
     margin:0 auto;
+    overflow:auto;
+    overflow-y:hidden;
+    overflow-x:hidden;
 }
 
 ::selection {background:#00aeef;}
@@ -67,6 +76,7 @@ hr {background-color: #00aeef;}
     padding-right:30px;
     box-sizing:border-box;
     -moz-box-sizing:border-box;
+    clear:both;
 }
 
 /*hide the sidebar when in fullscreen mode*/
@@ -313,7 +323,7 @@ button .ui-icon {
     border-radius:5px;
     box-sizing:border-box;
     -moz-box-sizing:border-box;
-    float:left;
+    float:top;
 }
 
 .hwios-widget {
@@ -595,37 +605,24 @@ code {
 
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
-
+/*custom theme-matching scrollbar in webkit based browsers*/
+::-webkit-scrollbar {width: 11px;}
 ::-webkit-scrollbar-button {background:#ddd;}
-
 ::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment  {
-    height: 0px;
-    display: block;
-}
-
+::-webkit-scrollbar-button:end:increment  {height: 0px;}
 ::-webkit-scrollbar-track-piece  {
     background-color: #efefef;
-    border-left:1px dotted #ddd;
-
+    box-shadow: inset 2px 2px 5px rgba(0,0,0,.5);
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
 }
-
-::-webkit-scrollbar-thumb:vertical {
+::-webkit-scrollbar-thumb {
     height: 50px;
+    margin:5px;
     background: #00aeef;
-    border: 1px outset #999;
+    border: 1px inset #ddd;
 }
-
-::-webkit-scrollbar-thumb:horizontal {
-    height: 50px;
-    background: #00aeef;
-    border: 1px outset #a6c9e2;
-}
-
+::-webkit-resizer {}
 
 .hwios-accordion {
     margin-bottom:10px;
